Kinect runner is finished ? Maybe? fucking stupid kinect
Signed-off-by: mrkaiser <dev.gupta.k@gmail.com>

--- a/KinectRunnerServer/KinectRunnerServer.csproj
+++ b/KinectRunnerServer/KinectRunnerServer.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Multicaster.cs" />
+    <Compile Include="KinectRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
